--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!--Hey! This is the original version
 of Simple CSS Waves-->
-
+<head>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <div class="header">
 
 <!--Content before waves-->
