--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p class="font"><i>The man who loved innovation</i></p>
 		</div>
 		<div id="img-div">
-			<img class="center" id=image src="images/steve.jpg" alt="Steve Jobs with his Macintosh">
+			<img class="center" id=image src="images/654842-steve-jobs-new.jpg" alt="Steve Jobs with his Macintosh">
 			<div class="center"><br>
 			<p id="img-caption" class="font">Steve Jobs in his 20's with early version of Macintosh</p><br>
 			</div>
