--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Tribute to Steve Jobs</title>
 </head>
 <body>
-	<main id="main">
+	<div id="main" class="center" justify-content="center" max-width="60%">
 		<div id="heading" class="center">
 		<h1 id="title" class="center">Steve  Jobs</h1>
 		<p class="font"><i>The man who loved innovation</i></p>
