--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ body {
 }
         
 #myCanvas {
-  width: 40vw;
-  height: 40vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .left{
@@ -231,7 +231,7 @@ a:before, a:after, a > span:before, a > span:after {
 </head>
 <div id="main">
 <div class="left">
-<canvas id="myCanvas" width="100%" height="100%">
+<canvas id="myCanvas" width="50%">
 
     </canvas>
 
